--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/about.jpg" height="300" class="object-fit-cover object-position-center" width="100%"
+            <img src="assets/img/555.jpg" height="400" class="object-fit-contain object-position-center" width="100%"
               alt="">
           </div>
           <div class="col-lg-8 content">
@@ -379,20 +379,23 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <h3 class="sitename">Personal</h3>
-      <p>Hello ... Saya Andri Aprila seorang freelance Desain Grafis, dan Komposer Musik.</p>
+      <p>Hello ... 
+        Saya Andri Aprila
+        seorang freelance Desain Grafis,
+        dan Komposer Musik</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/aprilio_art"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100013900473183"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/aprilio_art/"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.youtube.com/@Aprilioart93"><i class="bi bi-youtube"></i></a>
+        <a href="https://wa.me/6281213818776"><i class="bi bi-whatsapp"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Personal</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
-          Designed by <a href="https://bootstrapmade.com/">Aprilio Art</a>
+          Designed by <a href="/">Aprilio Art</a>
         </div>
       </div>
     </div>
