--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,8 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Personal</h1>
+        <img src="assets/img/logo.png" alt="">
+        <h5 class="mb-0">Portfolio Saya</h5>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -48,7 +47,6 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          
           <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -66,7 +64,9 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Contact</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <p class="mb-0">Apakah Anda memiliki proyek yang membutuhkan sentuhan kreatif dalam musik, desain grafis,
+                atau editing video? Saya siap membantu mewujudkan ide Anda menjadi karya nyata! Jangan ragu untuk
+                menghubungi saya untuk diskusi lebih lanjut mengenai kolaborasi, pertanyaan, atau penawaran.</p>
             </div>
           </div>
         </div>
@@ -93,17 +93,17 @@
               <i class="icon bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Cigombong - Bogor</p>
               </div>
             </div>
-          </div><!-- End Info Item -->
+          </div>
 
           <div class="col-md-6">
             <div class="info-item d-flex align-items-center" data-aos="fade-up" data-aos-delay="300">
               <i class="icon bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Me</h3>
-                <p>+1 5589 55488 55</p>
+                <p>+62 812 1381 8776</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -113,7 +113,7 @@
               <i class="icon bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>ikbalis92@gmail.com</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -124,11 +124,14 @@
               <div>
                 <h3>Social Profiles</h3>
                 <div class="social-links">
-                  <a href="#"><i class="bi bi-twitter-x"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-skype"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://x.com/aprilio_art" target="_blank" class="mb-2"><i class="bi bi-twitter-x"></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=100013900473183" target="_blank" class="mb-2"><i
+                      class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/aprilio_art/" target="_blank" class="mb-2"><i
+                      class="bi bi-instagram"></i></a>
+                  <a href="https://www.youtube.com/@Aprilioart93" target="_blank" class="mb-2"><i
+                      class="bi bi-youtube"></i></a>
+                  <a href="https://wa.me/6281213818776" target="_blank" class="mb-2"><i class="bi bi-whatsapp"></i></a>
                 </div>
               </div>
             </div>
@@ -136,7 +139,7 @@
 
         </div>
 
-        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="600">
+        <!-- <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="600">
           <div class="row gy-4">
 
             <div class="col-md-6">
@@ -164,7 +167,7 @@
             </div>
 
           </div>
-        </form><!-- End Contact Form -->
+        </form> -->
 
       </div>
 
@@ -175,31 +178,31 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <h3 class="sitename">Personal</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Hello ... 
+        Saya Andri Aprila
+        seorang freelance Desain Grafis,
+        dan Komposer Musik</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/aprilio_art"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100013900473183"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/aprilio_art/"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.youtube.com/@Aprilioart93"><i class="bi bi-youtube"></i></a>
+        <a href="https://wa.me/6281213818776"><i class="bi bi-whatsapp"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Personal</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you've purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Designed by <a href="/">Aprilio Art</a>
         </div>
       </div>
     </div>
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
