--- a/about.html
+++ b/about.html
@@ -65,8 +65,8 @@
             <div class="col-lg-8">
               <h1>About Me</h1>
               <p class="mb-0">
-                Saya adalah seorang Graphic Designer yang berdedikasi dengan hasrat besar dalam menciptakan desain
-                visual yang menarik dan fungsional. Dengan pengalaman bekerja di berbagai proyek kreatif, saya ahli
+                Saya adalah seorang Graphic Design yang berdedikasi dengan hasrat besar dalam menciptakan desain
+                visual yang menarik dan fungsional. Dengan pengalaman bekerja di berbagai Industri kreatif, saya ahli
                 dalam mengembangkan konsep desain yang tidak hanya indah secara estetika, tetapi juga mampu menyampaikan
                 pesan dengan efektif dan jelas.
               </p>
@@ -80,13 +80,13 @@
               <p>
                 Dan saya adalah seorang Composer dengan hasrat mendalam dalam menciptakan musik yang mampu membangkitkan
                 emosi dan menyempurnakan pengalaman mendengarkan. Dengan pengalaman dalam menciptakan berbagai genre
-                musik, saya ahli dalam menghasilkan komposisi yang dapat mendukung berbagai proyek visual, seperti
-                scoring film, iklan, jingle, hingga proyek multimedia lainnya.
+                musik, saya ahli dalam menghasilkan komposisi yang dapat mendukung berbagai Kebutuhan Project , seperti
+                scoring film, iklan, jingle, hingga project lainnya.
               </p>
               <br>
               <p>
                 Setiap karya yang saya ciptakan dirancang dengan hati-hati untuk mendukung narasi, suasana, dan tujuan
-                proyek, memastikan bahwa musik tidak hanya melengkapi, tetapi juga meningkatkan pesan yang ingin
+                projec, memastikan bahwa musik tidak hanya melengkapi, tetapi juga meningkatkan pesan yang ingin
                 disampaikan. Saya percaya bahwa musik memiliki kekuatan luar biasa untuk mengubah momen menjadi sesuatu
                 yang lebih berkesan.
               </p>
