--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Contact</h1>
-              <p class="mb-0">Apakah Anda memiliki proyek yang membutuhkan sentuhan kreatif dalam musik, desain grafis,
+              <p class="mb-0">Apakah Anda memiliki project yang membutuhkan sentuhan kreatif dalam musik, desain grafis,
                 atau editing video? Saya siap membantu mewujudkan ide Anda menjadi karya nyata! Jangan ragu untuk
                 menghubungi saya untuk diskusi lebih lanjut mengenai kolaborasi, pertanyaan, atau penawaran.</p>
             </div>
