--- a/resume.html
+++ b/resume.html
@@ -66,7 +66,7 @@
               <h1>Resume</h1>
               <p class="mb-0">
                 Selama beberapa tahun bekerja sebagai freelancer, saya telah berkolaborasi dengan berbagai industri dan
-                memahami pentingnya menjaga keseimbangan antara estetika dan fungsi dalam setiap proyek. Saya
+                memahami pentingnya menjaga keseimbangan antara estetika dan fungsi dalam setiap project. Saya
                 mengutamakan detail, selalu mengikuti perkembangan tren desain terbaru, dan berfokus pada penyampaian
                 hasil yang memuaskan sesuai dengan brief klien.
               </p>
@@ -96,7 +96,7 @@
 
             <div class="resume-item pb-0">
               <h4>Graphic Design</h4>
-              <p><em>Desainer Grafis yang inovatif dan berorientasi pada tenggat waktu dengan pengalaman lebih dari 3
+              <p><em>Desain Grafis yang inovatif dan berorientasi pada tenggat waktu dengan pengalaman lebih dari 3
                   tahun merancang dan mengembangkan materi pemasaran digital/cetak yang berpusat pada pengguna, mulai
                   dari konsep awal hingga hasil akhir yang sempurna.</em></p>
               <ul>
@@ -126,8 +126,8 @@
               <h5>2018 - Sekarang</h5>
               <p><em>Bogor - Tanah Baru</em></p>
               <ul>
-                <li>Menyusun komposisi musik orisinal yang sesuai dengan tema, suasana, dan kebutuhan proyek.</li>
-                <li>Mengembangkan melodi, harmoni, dan ritme yang mendukung narasi dan emosi dalam proyek.</li>
+                <li>Menyusun komposisi musik original yang sesuai dengan tema, suasana, dan kebutuhan project.</li>
+                <li>Mengembangkan melodi, harmoni, dan ritme yang mendukung narasi dan emosi dalam project.</li>
                 <li>Bekerja sama dengan sutradara, produser, dan tim kreatif lainnya untuk memahami visi mereka dan mengintegrasikan umpan balik dalam komposisi.</li>
                 <li>Membuat musik scoring untuk film series.</li>
               </ul>
