--- a/services.html
+++ b/services.html
@@ -68,8 +68,8 @@
               <h1>Collection</h1>
               <p class="mb-0">
                 Temukan beragam koleksi VST plugin dan preset software berkualitas tinggi yang dirancang untuk para
-                musisi, produser, dan sound engineer. Setiap produk dalam koleksi ini dirancang untuk memperluas
-                kreativitas Anda, memberikan hasil audio yang profesional, dan membantu Anda mencapai suara yang Anda
+                musisi, produser, dan desain grafis. Setiap produk dalam koleksi ini dirancang untuk memperluas
+                kreativitas Anda, memberikan hasil audio , visual dan gambar yang profesional, dan membantu Anda mencapai yang Anda
                 inginkan dengan lebih mudah.
               </p>
             </div>
