--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-      <img src="assets/img/animasi.gif" alt="" class="object-fit-cover" style="object-position: left left ;" data-aos="fade-in">
+      <img src="assets/img/33.gif" alt="" class="object-fit-cover" style="object-position: left left ;" data-aos="fade-in">
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Andri Aprila</h2>
         <p>I'm <span class="typed" data-typed-items="Graphic Design, Freelancer, Composer"></span><span class="typed-cursor typed-cursor--blink"></span></p>
