--- a/portfolio.html
+++ b/portfolio.html
@@ -93,10 +93,12 @@
             <li data-filter=".filter-manipulation">Manipulation</li>
             <li data-filter=".filter-mockup">Mockup</li>
             <li data-filter=".filter-advertising">Advertising</li>
+        
           </ul>
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-abstrak">
+   
+  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-abstrak">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/ABSTRAK/1.jpg" width="100%" height="300"
                   class="object-fit-cover object-position-center" alt="">
@@ -190,6 +192,116 @@
                   class="object-fit-cover object-position-center" alt="">
                 <div class="portfolio-info">
                   <a href="assets/img/portfolio/logo/lg2.jpeg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/aa.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/aa.jpg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/bb.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/bb.jpg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/cc.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/cc.jpg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/dd.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/dd.jpg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/ee.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/ee.jpg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/ff.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/ff.jpg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/gg.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/gg.jpg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/hh.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/hh.jpg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/ii.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/ii.jpg" data-gallery="portfolio-gallery-app"
+                    class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-logo">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/logo/BEAN.jpg" width="100%" height="300"
+                  class="object-fit-cover object-position-center" alt="">
+                <div class="portfolio-info">
+                  <a href="assets/img/portfolio/logo/BEAN.jpg" data-gallery="portfolio-gallery-app"
                     class="glightbox ms-4 preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
