--- a/Aprilio Art.html
+++ b/Aprilio Art.html
@@ -42,7 +42,7 @@
           <li><a href="file:///C:/Users/djbai/OneDrive/Documents/aprilioart/index.html">Home</a></li>
           <li><a href="file:///C:/Users/djbai/OneDrive/Documents/aprilioart/about.html">About</a></li>
           <li><a href="file:///C:/Users/djbai/OneDrive/Documents/aprilioart/resume.html">Resume</a></li>
-          <li><a href="file:///C:/Users/djbai/OneDrive/Documents/aprilioart/services.html">Services</a></li>
+          <li><a href="file:///C:/Users/djbai/OneDrive/Documents/aprilioart/services.html">Collection</a></li>
           <li><a href="file:///C:/Users/djbai/OneDrive/Documents/aprilioart/portfolio.html" class="active">Portfolio</a></li>
           <li><a href="file:///C:/Users/djbai/OneDrive/Documents/aprilioart/contact.html">Contact</a></li>
         </ul>
