--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-<meta property="og:title" content="Porfolio Andri Aprila" />
-<meta property="og:description" content="Deskripsi singkat tentang halaman Anda." />
-<meta property="og:image" content="t.jpg" />
-<meta property="og:type" content="website" />
 
 </head>
 
@@ -39,7 +35,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-start">
-        <img src="assets/img/logo.png" alt="">
+        <img src="assets/img/logo3.png" alt="">
         <h5 class="mb-0">Portfolio Saya</h5>
       </a>
 
