--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-start">
-        <img src="assets/img/logo.png" alt="">
+        <img src="assets/img/logo3.png" alt="">
         <h5 class="mb-0">Portfolio Saya</h5>
       </a>
 
