--- a/Aprilio Art.html
+++ b/Aprilio Art.html
@@ -25,6 +25,10 @@
 
   <!-- Main CSS File -->
   <link href="./Aprilio Art_files/main.css" rel="stylesheet">
+      <meta property="og:title" content="Portfolio Andri Aprila" />
+<meta property="og:description" content="Deskripsi singkat tentang halaman Aprilio art." />
+<meta property="og:image" content="assets/img/logo3.png" />
+<meta property="og:type" content="website" />
 </head>
 
 <body class="portfolio-page" data-aos-easing="ease-in-out" data-aos-duration="600" data-aos-delay="0">
