--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,10 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+      <meta property="og:title" content="Portfolio Andri Aprila" />
+<meta property="og:description" content="Deskripsi singkat tentang halaman Aprilio art." />
+<meta property="og:image" content="assets/img/logo3.png" />
+<meta property="og:type" content="website" />
 </head>
 
 <body class="portfolio-page">
