--- a/Aprilio Art.html
+++ b/Aprilio Art.html
@@ -67,7 +67,7 @@
             <div class="col-lg-8">
               <h1>Project Selection</h1>
               <p class="mb-0">Selamat datang di portfolio saya, di mana kreativitas bertemu dengan kualitas profesional.
-                Saya adalah seorang Composer dan Graphic Design berpengalaman, yang berfokus pada menciptakan karya
+                Saya adalah seorang Composer dan Graphic Designer berpengalaman, yang berfokus pada menciptakan karya
                 musik original.</p>
             </div>
           </div>
