--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
             <div class="col-lg-8">
               <h1>About Me</h1>
               <p class="mb-0">
-                Saya adalah seorang Graphic Design yang berdedikasi dengan hasrat besar dalam menciptakan desain
+                Saya adalah seorang Graphic Designer yang berdedikasi dengan hasrat besar dalam menciptakan desain
                 visual yang menarik dan fungsional. Dengan pengalaman bekerja di berbagai Industri kreatif, saya ahli
                 dalam mengembangkan konsep desain yang tidak hanya indah secara estetika, tetapi juga mampu menyampaikan
                 pesan dengan efektif dan jelas.
