--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <img src="assets/img/r.jpg" alt="" class="object-fit-cover" style="object-position: left left ;" data-aos="fade-in">
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Andri Aprila</h2>
-        <p>I'm <span class="typed" data-typed-items="Graphic Design, Freelancer, Composer"></span><span class="typed-cursor typed-cursor--blink"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Graphic Designer, Freelancer, Composer"></span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
           <a href="https://x.com/aprilio_art" target="_blank" class="mb-2"><i class="bi bi-twitter-x"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100013900473183" target="_blank" class="mb-2"><i class="bi bi-facebook"></i></a>
